Update AchievementConditions.java